[package]
name = "dev-loop"
version = "0.1.1"
authors = ["Cynthia <cynthia@coan.dev>"]
edition = "2018"

[features]
default = ["static-ssl"]
static-ssl = ["isahc/static-ssl"]
static-openssl = ["isahc/static-openssl"]

[dependencies]
anyhow = "^1.0"
async-std = { version = "^1.5", features = ["attributes"] }
async-trait = "^0.1"
atty = "^0.2"
colored = "^1.9"
crossbeam-channel = "^0.4"
crossbeam-deque = "^0.7"
cfg-if = "^0.1"
ctrlc = "^3.1"
# TODO(cynthia): go back to upstream once unix socket support is merged in.
isahc = { git = "https://github.com/SecurityInsanity/isahc", features = ["http2", "json"] }
lazy_static = "^1.4"
libc = "^0.2"
log = "^0.4"
num_cpus = "^1.12"
once_cell = "^1.3"
semver = "^0.9"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.8"
term_size = "1.0.0-beta1"
tracing = "^0.1"
tracing-futures = "^0.2"
tracing-log = "^0.1"
tracing-subscriber = "^0.2"
twox-hash = "^1.5"
url = { version = "^2.1" }
users = { version = "^0.10", default-features = false, features = ["cache", "mock"] }
uuid = { version = "^0.8", features = ["v4"] }