[package]
name = "dev-loop"
version = "0.1.1"
authors = ["Cynthia <cynthia@coan.dev>"]
edition = "2018"
repository = "https://github.com/SecurityInsanity/dev-loop"

[features]
default = ["static-ssl"]
static-ssl = ["isahc/static-ssl"]

[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
annotate-snippets = { version = "^0.9", features = ["color"] }
async-std = { version = "^1.9", features = ["attributes"] }
async-trait = "^0.1"
atty = "^0.2"
base64 = "^0.13"
colored = "^2.0"
color-eyre = "^0.5.11"
crossbeam-channel = "^0.5"
crossbeam-deque = "^0.8"
cfg-if = "^1.0"
ctrlc = "^3.1"
isahc = { version = "^0.9.14", features = ["http2", "json"] }
lazy_static = "^1.4"
libc = "^0.2"
log = "^0.4"
num_cpus = "^1.13"
once_cell = "^1.8"
pin-project-lite = "^0.2.7"
semver = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.8"
smol = "^1.2.5"
term_size = "1.0.0-beta1"
tracing = "^0.1"
tracing-error = "^0.1"
tracing-futures = "^0.2"
tracing-subscriber = "^0.2"
twox-hash = "^1.6"
url = { version = "^2.2" }
users = { version = "^0.11", default-features = false, features = ["cache", "mock"] }
uuid = { version = "^0.8", features = ["v4"] }